# logust

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  prek.toml  pyproject.toml  renovate.json  sitemap.xml  versions.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: CI.yml  dependabot-auto-merge.yml  docs.yml  freethreaded-release.yml  release-drafter.yml  security.yml  test.yml
0.4.0/: 404.html  index.html  objects.inv  sitemap.xml
0.4.0/api/: index.html
0.4.0/comparison/: index.html
0.4.0/getting-started/installation/: index.html
0.4.0/getting-started/quick-start/: index.html
0.4.0/guide/canonical-events/: index.html
0.4.0/guide/context/: index.html
0.4.0/guide/exceptions/: index.html
0.4.0/guide/file-output/: index.html
0.4.0/guide/formatting/: index.html
0.4.0/guide/integrations/: index.html
0.4.0/guide/levels/: index.html
0.4.1/: 404.html  index.html  sitemap.xml
0.4.1/api/: index.html
0.4.1/comparison/: index.html
0.4.1/getting-started/installation/: index.html
0.4.1/getting-started/quick-start/: index.html
0.4.1/guide/canonical-events/: index.html
0.4.1/guide/context/: index.html
0.4.1/guide/exceptions/: index.html
0.4.1/guide/file-output/: index.html
0.4.1/guide/formatting/: index.html
0.4.1/guide/integrations/: index.html
0.4.1/guide/levels/: index.html
0.4.1/search/: search_index.json
api/: index.html
benchmarks/: README.md  __init__.py  bench_filter_mixed.py  bench_format_record.py  bench_lazy_is_level.py  bench_throughput.py  conftest.py
comparison/: index.html
docs/: api.md  comparison.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/guide/: canonical-events.md  context.md  exceptions.md  file-output.md  formatting.md  integrations.md  levels.md
examples/: 01_basic_logging.py  02_file_output.py  03_json_serialization.py  04_context_binding.py  05_exception_handling.py  06_custom_levels.py  07_callbacks.py  08_fastapi_integration.py  README.md
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guide/context/: index.html
guide/exceptions/: index.html
guide/file-output/: index.html
guide/formatting/: index.html
guide/integrations/: index.html
guide/levels/: index.html
logust/: __init__.py  _logger.py  _logust.pyi  _opt.py  _parse.py  _template.py  _traceback.py  _types.py
logust/contrib/: __init__.py  decorators.py  events.py  logging_handler.py  starlette.py
search/: search_index.json
src/: format.rs  handler.rs  level.rs  lib.rs  sink.rs
stylesheets/: extra.css
tests/: __init__.py  conftest.py  test_callable_sink.py  test_callable_template.py  test_callbacks.py  test_caller_info.py  test_canonical_events.py  test_collect_options.py  test_configure.py  test_context.py  test_filter_fast_path.py  test_format_optimization.py  test_format_tokens.py  test_handlers.py  test_kwargs_extra.py  test_levels.py  test_logger.py  test_multiprocessing.py  test_opt.py  test_parsing.py  test_starlette_middleware.py  test_starlette_security.py  test_token_registry.py  test_typed_json_extra.py  test_web_integration.py
