[package]
name = "logust"
version = "0.2.0"
edition = "2024"

[lib]
name = "_logust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
flate2 = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
