[package]
name = "logust"
version = "0.3.0"
edition = "2024"

[lib]
name = "_logust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
flate2 = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }
